# RetailAnalytics

./: .gitignore  Dockerfile  main.py  pyproject.toml  test.py
backend/: check_csv.py  database.db  database.py  main.py  models.py  requirements.txt  schemas.py  seed.py
backend/routers/: sales.py
data/: SalesRegister-1_cleaned.csv  SalesRegister_cleaned.csv
frontend/: package-lock.json  postcss.config.js
frontend/src/api/: client.js
frontend/src/components/: Dashboard.jsx  ForecastCard.jsx  SalesChart.jsx  SalesTable.jsx
